--- a/src/main/resources/web/WEB-INF/templates/CustomerHomePage.html
+++ b/src/main/resources/web/WEB-INF/templates/CustomerHomePage.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      lang="en" th:lang="it" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- Meta tag required for boostrap -->
     <meta charset="UTF-8">
@@ -10,41 +9,69 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           rel="stylesheet">
-
     <title>PoliComShop - Home</title>
+    <style>
+        .divider:after,
+        .divider:before {
+            content: "";
+            flex: 1;
+            height: 1px;
+            background: #eee;
+        }
+
+        .h-custom {
+            height: calc(100% - 73px);
+        }
+
+        @media (max-width: 450px) {
+            .h-custom {
+                height: 100%;
+            }
+        }
+    </style>
 </head>
-<body style="margin-left:40px; margin-right:40px">
-<nav class="navbar navbar-expand-lg navbar-light bg-light"
-     th:replace="fragments/navbar :: navbar">
-</nav>
-<h2>Rejected orders</h2>
-<div style="margin:20px">
-    <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action"><b>Packge name</b> - 12/11/2021</a>
-    </div>
-</div>
-<h2>Our service package</h2>
-<div class="container">
-    <div class="row">
-        <div th:each="offer: ${offerList}" class="card" style="width: 18rem;margin: 10px">
-            <div class="card-body">
-                <h5 class="card-title" th:text="${offer.servicePackage.name}"><b>Package name</b></h5>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Fixed phone</li>
-                    <li class="list-group-item">Mobile phone</li>
-                    <li class="list-group-item">Fixed internet</li>
-                    <li class="list-group-item">Mobile internet</li>
-                </ul>
-                <div style="display: flex;justify-content: space-between; margin-top:10px">
-                    <span><b th:text="${offer.monthlyFee}€">0€</b>/month</span>
-                    <a href="#" class="btn btn-primary">Select</a>
+<body>
+<section class="vh-100">
+    <div class="container-fluid h-auto w-75">
+
+        <div th:if="${rejPayments != null && #lists.size(rejPayments) > 0}">
+            <h1 style="margin-bottom: 20px; margin-top: 20px">Rejected payments</h1>
+            <div th:each="order: ${rejPayments}" class="list-group">
+                <a href="#" class="list-group-item list-group-item-action">
+                    <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1" th:text="${order.offer.servicePackage.name}">Package name</h5>
+                        <b class="text-muted" th:text="${order.totalMonthlyFee +'€'}">0€</b>
+                    </div>
+                    <p class="mb-1" th:text="${#dates.format(order.creationDate, 'dd/MM/yyyy')}">12/10/2021</p>
+                </a>
+            </div>
+        </div>
+        <h1 style="margin-bottom: 20px; margin-top: 20px">Our Service Package</h1>
+        <div class="row">
+            <div th:each="offer: ${offerList}" class="card" style="width: 18rem; margin: 20px">
+                <div class="card-body">
+                    <h5 class="card-title" style="font-weight: bold" th:text="${offer.servicePackage.name}">Package
+                        name</h5>
+                    <p class="card-text"><b th:text="${offer.monthlyFee + '€'}">0</b>/month</p>
+                </div>
+                <div class="container h-custom">
+                    <ul class="list-group">
+                        <li th:each="service: ${offer.servicePackage.serviceList}" class="list-group-item">
+                            <span th:if="${service.type == 1}">Fixed Internet</span>
+                            <span th:if="${service.type == 2}">Fixed Phone</span>
+                            <span th:if="${service.type == 3}">Mobile Internet</span>
+                            <span th:if="${service.type == 4}">Mobile Phone</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="card-body">
+                    <a th:href="@{/CustomizeOrder(id_offer=${offer.id})}" class="card-link">View more</a>
                 </div>
             </div>
-
-
         </div>
-
     </div>
-</div>
+
+</section>
+
 </body>
 </html>
