--- a/src/main/resources/web/WEB-INF/templates/SignUpPage.html
+++ b/src/main/resources/web/WEB-INF/templates/SignUpPage.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      lang="en" th:lang="it" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- Meta tag required for boostrap -->
     <meta charset="UTF-8">
@@ -10,34 +9,81 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           rel="stylesheet">
-    <title>SignUp</title>
+    <title>PoliComShop - SignUp</title>
+    <style>
+        .divider:after,
+        .divider:before {
+            content: "";
+            flex: 1;
+            height: 1px;
+            background: #eee;
+        }
+
+        .h-custom {
+            height: calc(100% - 73px);
+        }
+
+        @media (max-width: 450px) {
+            .h-custom {
+                height: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
-<div class="row mt-5 justify-content-center">
-    <div class="col-5 mx-5">
-        <form action="SignUp" method="post">
-            <div class="row mb-3 mt-3">
-                <label for="username" class="col-sm-2 col-form-label">Username</label>
-                <div class="col-sm-10">
-                    <input required type="text" class="form-control" id="username" name="username">
-                </div>
+<section class="vh-100">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"
+         th:replace="fragments/navbar :: navbar">
+    </nav>
+    <div class="container-fluid h-custom">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-md-9 col-lg-6 col-xl-5">
+                <img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-login-form/draw2.png"
+                     class="img-fluid"
+                     alt="Sample image">
             </div>
-            <div class="row mb-3">
-                <label for="email" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-10">
-                    <input required type="text" class="form-control" id="email" name="email">
-                </div>
+            <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+                <form action="SignUp" method="post">
+
+                    <div class="divider d-flex align-items-center my-4">
+                        <p class="text-center fw-bold mx-3 mb-0">Sign up</p>
+                    </div>
+
+                    <!-- Username input -->
+                    <div class="form-outline mb-4">
+                        <input type="text" id="username" name="username" class="form-control form-control-lg"
+                               placeholder="Enter a valid username"/>
+                        <label class="form-label" for="email">Username</label>
+                    </div>
+
+                    <!-- Email input -->
+                    <div class="form-outline mb-4">
+                        <input type="email" id="email" name="email" class="form-control form-control-lg"
+                               placeholder="Enter a valid email address"/>
+                        <label class="form-label" for="email">Email address</label>
+                    </div>
+
+                    <!-- Password input -->
+                    <div class="form-outline mb-3">
+                        <input type="password" id="password" name="password" class="form-control form-control-lg"
+                               placeholder="Enter password"/>
+                        <label class="form-label" for="password">Password</label>
+                    </div>
+
+                    <div class="text-center text-lg-start mt-4 pt-2">
+                        <button type="submit" class="btn btn-primary btn-lg"
+                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Sing up
+                        </button>
+                        <p class="small fw-bold mt-2 pt-1 mb-0">Do you have an account? <a href="SignIn"
+                                                                                          class="link-danger">Login</a>
+                        </p>
+                    </div>
+                </form>
+                <p class="text-danger" th:text="${errorMsg}"></p>
             </div>
-            <div class="row mb-3">
-                <label for="password" class="col-sm-2 col-form-label">Password</label>
-                <div class="col-sm-10">
-                    <input required type="password" class="form-control" id="password" name="password">
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Sign up</button>
-        </form>
-        <p class="text-danger" th:text="${errorMsg}"></p>
+        </div>
     </div>
-</div>
+</section>
+
 </body>
 </html>
