Unified servlets behind HttpServletThymeleaf.java, fixed db column names

--- a/src/main/resources/web/WEB-INF/templates/CustomerHomePage.html
+++ b/src/main/resources/web/WEB-INF/templates/CustomerHomePage.html
@@ -31,6 +31,9 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light"
+     th:replace="fragments/navbar :: navbar">
+</nav>
 <section class="vh-100">
     <div class="container-fluid h-auto w-75">
 
