--- a/src/main/resources/web/WEB-INF/templates/CustomizeOrderPage.html
+++ b/src/main/resources/web/WEB-INF/templates/CustomizeOrderPage.html
@@ -38,11 +38,10 @@
          th:replace="fragments/navbar :: navbar">
     </nav>
     <div class="container-fluid h-auto w-75">
-        <h1 style="margin-bottom: 20px; margin-top: 20px" th:text="${order.offer.getServicePackage().name}">Package
-            name</h1>
+        <h1 style="margin-bottom: 20px; margin-top: 20px" th:text="${servicePackage.name}">Package name</h1>
         <p>This package include the following services:</p>
         <ul>
-            <li th:each="service: ${order.offer.servicePackage.serviceList}" class="list-group-item">
+            <li class="list-group-item" th:each="service: ${servicePackage.serviceList}">
                 <span th:if="${service.type == 1}" th:inline="text"><b>Fixed Internet</b>: come ottengo le info?</span>
                 <span th:if="${service.type == 2}"><b>Fixed Phone</b>: 100 minutes/month <small>(0.5€/minute fee)</small></span>
                 <span th:if="${service.type == 3}"><b>Mobile Internet</b>:</span>
@@ -56,64 +55,34 @@
 
         <form method="post" th:action="@{/CustomizeOrder}">
 
-            <span><span style="font-size: 35px;">Step 1</span> <span style="font-size: 28px"> - choose the validity period among those available</span> </span>
-            <div style="margin: 20px">
+            <span style="font-size: 35px;">Step 1</span> <span style="font-size: 28px"> - choose the validity period among those available</span>
+            <div style="margin: 20px" th:each="offer : ${servicePackage.getOffers()}">
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        Default radio
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                    <label class="form-check-label" for="flexRadioDefault2">
-                        Default checked radio
-                    </label>
+                    <label class="form-check-label" th:for="'offer'+${offer.id}" th:text="${offer.getMonthlyFee() + '/month for ' + offer.getValidityPeriod() + ' months'}"> Default radio </label>
+                    <input class="form-check-input" th:id="'offer'+${offer.id}" name="offerRadio" th:value="${offer.id}" type="radio" th:checked="${order != null && order.getOffer() != null && order.getOffer().id == offer.id}">
                 </div>
             </div>
 
-            <span><span style="font-size: 35px;">Step 2</span> <span
-                    style="font-size: 28px"> - choose the start date</span> </span>
-            <br>
-            <input style="margin: 20px" id="start_date" name="start_date"
-                   th:value="${order.getStartDateString()}" type="date">
-            <br>
-
+            <span style="font-size: 35px;">Step 2</span>
+            <label for="start_date" style="font-size: 28px"> - choose the start date</label><br>
+            <input id="start_date" name="start_date" style="margin: 20px" th:value="${order.getStartDateString()}" type="date">
             <div th:if="${optionalProductMap.size() > 0 }">
                 <span><span style="font-size: 35px;">Step 3</span> <span style="font-size: 28px"> - choose the optional products to add</span> </span>
-
                 <div class="container" style="margin-top: 20px">
                     <div class="row">
-                        <div class="card w-auto" th:each="optProd : ${optionalProductMap}"
-                             style="margin-left: 10px; margin-right: 10px">
+                        <div class="card w-auto" style="margin-left: 10px; margin-right: 10px"
+                             th:each="optProd : ${optionalProductMap}">
                             <div class="card-body">
-                                <span><b style="font-size: 20px" th:text="${optProd.key.name}">Optional product name</b> &nbsp;&nbsp; <span
-                                        th:text="${optProd.key.monthlyFee}">10</span>€/month &nbsp;&nbsp;</span>
-                                <a href="#CHANGE ME" th:if="${!optProd.value}">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                         class="bi bi-plus-circle" viewBox="0 0 16 16">
-                                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                                    </svg>
-                                </a>
-                                <a href="# CHANGE ME" class="btn btn-primary" th:if="${optProd.value}">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                         color="red"
-                                         class="bi bi-dash-circle" viewBox="0 0 16 16">
-                                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                                        <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
-                                    </svg>
-                                </a>
+                                    <b style="font-size: 20px" th:text="${optProd.key.name}">Optional product name</b>
+                                    <span th:text="${optProd.key.monthlyFee + '€/month'}">10</span>
+                                    <input type="checkbox" th:id="'optProd' + ${optProd.key.getId()}" name="opProd" th:value="${optProd.key.getId()}" th:checked="${optProd.value}">
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
-
             <hr>
             <div class=" text-center text-lg-start mt-4 pt-2" style="display: flex;justify-content: space-between;">
-
                 <span style="font-size: 35px"><b th:text="${order.totalMonthlyFee}">35€</b>/month</span>
                 <button type="submit" class="btn btn-primary btn-lg"
                         style="padding-left: 2.5rem; padding-right: 2.5rem;">Checkout
