Implemented managing for AuditCustomer in/out the table
Recoded AuditCustomer because it is not possibile to insert object into
DB whitout JPA. So mapped AuditCustomer as "Derived Identifiers"

--- a/WEB/src/it.polimi.DB2/webapp/WEB-INF/templates/PaymentPage.html
+++ b/WEB/src/it.polimi.DB2/webapp/WEB-INF/templates/PaymentPage.html
@@ -18,5 +18,6 @@
      th:replace="fragments/navbar :: navbar">
 </nav>
     <div th:text="${result}"></div>
+    <div th:text="${nFailedPayments}"></div>
 </body>
 </html>
