--- a/WEB/src/it.polimi.DB2/webapp/WEB-INF/templates/CustomerHomePage.html
+++ b/WEB/src/it.polimi.DB2/webapp/WEB-INF/templates/CustomerHomePage.html
@@ -46,7 +46,7 @@
                         <b class="text-muted" th:text="${order.totalMonthlyFee +'€'}">0€</b>
                     </div>
                     <p class="mb-1" th:text="${#dates.format(order.creationDate, 'dd/MM/yyyy')}">12/10/2021</p>
-                    <a class="btn btn-primary float-end" th:href="@{Repay(id=${order.id})}" role="button">Repay</a>
+                    <a class="btn btn-primary float-end" th:href="@{Payment(id=${order.id})}" role="button">Repay</a>
                 </div>
             </div>
         </div>
