--- a/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/fragments/navbar.html
+++ b/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/fragments/navbar.html
@@ -11,7 +11,7 @@
                     <a class="nav-link"><span style="color: white" th:text="${user.getUsername()}">Pippo</span></a>
                 </li>
                 <li>
-                    <a th:href="@{/Report}">Report Page</a>
+                    <a class="nav-link" style="color: white" th:href="@{/Report}">Report Page</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/Logout}"><span style="color: white">Logout</span></a>
