--- a/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/HomePage.html
+++ b/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/HomePage.html
@@ -1,13 +1,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <!-- Meta tag required for boostrap -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link crossorigin="anonymous"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-          rel="stylesheet">
+    <div th:replace="fragments/headerImport :: header"></div>
     <title>PoliComShop - Employee Home</title>
 </head>
 <body>
