--- a/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/fragments/navbar.html
+++ b/EmployeeWeb/src/it.polimi.DB2/web/WEB-INF/templates/fragments/navbar.html
@@ -11,6 +11,9 @@
                     <a class="nav-link"><span style="color: white" th:text="${user.getUsername()}">Pippo</span></a>
                 </li>
                 <li>
+                    <a class="nav-link" style="color: white" th:href="@{/ManagePackages}">Manage packages</a>
+                </li>
+                <li>
                     <a class="nav-link" style="color: white" th:href="@{/Report}">Report Page</a>
                 </li>
                 <li class="nav-item">
